@@ -1,5 +1,9 @@
 2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* DockPanelTest.cs: Expanded MeasureOverride test, added ButtonMeasureOverride test.
+
+2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* DockPanelTest.cs: Expanded MeasureOverride test.
 
 2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>
